doc/pjdfstest/tests/errors/sidebar-items.js
window.SIDEBAR_ITEMS = {"mod":["eexist","efault","eloop","enametoolong","enoent","enotdir","erofs","etxtbsy","exdev"]};